<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:background="#F1F1F1">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m50"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/m25"
            android:layout_height="@dimen/m25"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/m15"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_name"/>

        <io.RentEasy.views.MediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/item_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boder_language_selector"
            android:layout_margin="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/check1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/hint_color"
                android:layout_marginRight="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <io.RentEasy.views.MediumTextView
                android:id="@+id/tv_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:layout_toRightOf="@id/english_logo"
                android:layout_marginLeft="15dp"
                android:textSize="17sp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/english_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/english_logo"
                android:layout_marginLeft="25dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_hin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boder_language_selector"
            android:layout_margin="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/check2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/hint_color"
                android:layout_marginRight="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <io.RentEasy.views.MediumTextView
                android:id="@+id/tv_hin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="हिन्दी"
                android:layout_toRightOf="@id/hindi_logo"
                android:layout_marginLeft="15dp"
                android:textSize="17sp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/hindi_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hindi_logo"
                android:layout_marginLeft="25dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boder_language_selector"
            android:layout_margin="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/check3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/hint_color"
                android:layout_marginRight="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <io.RentEasy.views.MediumTextView
                android:id="@+id/tv_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="తెలుగు"
                android:layout_toRightOf="@id/telugu_logo"
                android:layout_marginLeft="15dp"
                android:textSize="17sp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/telugu_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hyd"
                android:layout_marginLeft="25dp"/>

        </RelativeLayout>

    </LinearLayout>

    <io.RentEasy.views.MediumTextView
        android:id="@+id/tv_change"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m50"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/change_language"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>